clusters/homelab-01/apps/demo-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo-web
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
